# agent-ops

./: .gitignore  AGENT-INTEGRATION.md  COMPLETE-WORKFLOW.md  GIT-WORKTREE.md  GITHUB-ACTION-GUIDE.md  PUBLISH.md  README.md  TESTING.md  USAGE.md  WORKFLOW-SYNTAX.md  bootstrap.sh  example-workflow.yml  pyproject.toml
.github/actions/agent-runner/: action.yml
.github/workflows/: pull_request.yml  release.yml  test-pr-bot.yml  test.yml
_temp_agent-ops_structure/: all_files.txt  code_files.txt  export_index.json  project_structure.txt  project_structure.yaml
_temp_agent-ops_structure/_psn/: .gitignore.psn.md  README.md.psn.md  USAGE.md.psn.md  pyproject.toml.psn.md
_temp_agent-ops_structure/_psn/.github/workflows/: pull_request.yml.psn.md  test-pr-bot.yml.psn.md
_temp_agent-ops_structure/_psn/actions/pr-bot/: Dockerfile.psn.md  action.yml.psn.md  entrypoint.sh.psn.md  pr_bot.py.psn.md  pyproject.toml.psn.md
actions/pr-bot/: Dockerfile  action.yml  entrypoint.sh  pr_bot.py  pyproject.toml
agent/: agt
agent_instructions/: main.md
agt/: README.md  __init__.py  cli.py  pyproject.toml  vscode.py  worktree.py
agt/agt/: __init__.py  __main__.py  cli.py  vscode.py  worktree.py
agt/reports/: project_audit_report.json
config/: tools.yml
docs/: CHANGELOG.md  COMMANDS.md  INTEGRATION_GUIDE.md  TESTING.md  TRY_IT_OUT.md  architecture.md  cli_reference.md  command_storage.md  quick_start.md  worktree_agent_user_manual.md
docs/findings/: finding_20251106_pypi_api_token.md
docs/legacy/: GITHUB-ACTION-GUIDE.md  README.md  USAGE.md
examples/: demo_action.yml  demo_local.sh
scripts/: agt.sh.example  current_time.py  multiply.py  requirements.txt  update_command_runner.py  venv_check.py
tests/: test_cli.py  test_integration.py  test_negative.py  test_worktree.py
